working on left header section

--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Sauti Sol</title>
 </head>
 
 <body>
-    <h1>Sauti Sol</h1>
+    <main>
+        <div class="header">
+            <div class="left-header">
+                <h1>Sauti</h1>
+            </div>
+            <div class="right-header">
+                <h1>Sauti</h1>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
