Social media links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,40 @@
     <main>
         <div class="header">
             <div class="left-header">
-                <h1>Sauti</h1>
+                <p class="heading">Sauti Sol</p>
+                <ul class="pages">
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Music</a></li>
+                    <li><a href="#">Video</a></li>
+                    <li><a href="#">Contacts</a></li>
+                </ul>
+                <div class="social">
+                    <div class="social-word">
+                        <p>Socila Media</p>
+                    </div>
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <img src="./images/twitter.png" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="./images/insta.png" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="./images/youtube.png" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="./images/facebook.png" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <div class="right-header">
                 <h1>Sauti</h1>
