--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
         <div class="header">
             <div class="left-header">
-                <p class="heading">Sauti Sol</p>
+                <h4 class="heading">Sauti Sol</h4>
                 <ul class="pages">
                     <li><a href="#">About us</a></li>
                     <li><a href="#">Music</a></li>
@@ -24,7 +24,7 @@
                     <div class="social-word">
                         <p>Socila Media</p>
                     </div>
-                    <ul>
+                    <ul class="icons">
                         <li>
                             <a href="#">
                                 <img src="./images/twitter.png" alt="">
