--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <ul class="icons">
                         <li>
                             <a href="#">
-                                <img src="./images/twitter.png" alt="">
+                                <img class="twitter" src="./images/twitter.png" alt="">
                             </a>
                         </li>
                         <li>
@@ -37,19 +37,20 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./images/youtube.png" alt="">
+                                <img class="twitter" src="./images/twitter.png" alt="">
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./images/facebook.png" alt="">
+                                <img class="twitter" src="./images/twitter.png" alt="">
                             </a>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="right-header">
-                <h1>Sauti</h1>
+                <h1>we are now on intstagra</h1>
+                <button>Fllow us</button>
             </div>
         </div>
     </main>
