--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
                 </div>
             </div>
             <div class="right-header">
-                <h1>we are now on intstagra</h1>
-                <button>Fllow us</button>
+                <div class="right-section">
+                    <h1>Now we are on instagram</h1>
+                    <button>FOLLOW NOW ...</button>
+                </div>
             </div>
         </div>
     </main>
