about us section

--- a/index.html
+++ b/index.html
@@ -11,50 +11,64 @@
 
 <body>
     <main>
-        <div class="header">
-            <div class="left-header">
-                <h4 class="heading">Sauti Sol</h4>
-                <ul class="pages">
-                    <li><a href="#">About us</a></li>
-                    <li><a href="#">Music</a></li>
-                    <li><a href="#">Video</a></li>
-                    <li><a href="#">Contacts</a></li>
-                </ul>
-                <div class="social">
-                    <div class="social-word">
-                        <p>Socila Media</p>
-                    </div>
-                    <ul class="icons">
-                        <li>
-                            <a href="#">
-                                <img class="twitter" src="./images/twitter.png" alt="">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="./images/insta.png" alt="">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img class="twitter" src="./images/twitter.png" alt="">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img class="twitter" src="./images/twitter.png" alt="">
-                            </a>
-                        </li>
+        <section>
+            <div class="header">
+                <div class="left-header">
+                    <h4 class="heading">Sauti Sol</h4>
+                    <ul class="pages">
+                        <li><a href="#">About us</a></li>
+                        <li><a href="#">Music</a></li>
+                        <li><a href="#">Video</a></li>
+                        <li><a href="#">Contacts</a></li>
                     </ul>
+                    <div class="social">
+                        <div class="social-word">
+                            <p>Socila Media</p>
+                        </div>
+                        <ul class="icons">
+                            <li>
+                                <a href="#">
+                                    <img class="twitter" src="./images/twitter.png" alt="">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="./images/insta.png" alt="">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img class="twitter" src="./images/twitter.png" alt="">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img class="twitter" src="./images/twitter.png" alt="">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="right-header">
+                    <div class="right-section">
+                        <h1>Now we are on instagram</h1>
+                        <button>FOLLOW NOW ...</button>
+                    </div>
                 </div>
             </div>
-            <div class="right-header">
-                <div class="right-section">
-                    <h1>Now we are on instagram</h1>
-                    <button>FOLLOW NOW ...</button>
-                </div>
+        </section>
+        <section class="aboutus">
+            <div>
+                <img src="./images/hero.jpg" alt="">
             </div>
-        </div>
+            <div class="">
+                <h1>About us</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat cum totam optio omnis asperiores,
+                    ipsum iste, neque praesentium nisi mollitia, est quis aut eaque numquam labore! Quia minima
+                    laudantium earum.</p>
+            </div>
+            </div>
+        </section>
     </main>
 </body>
 
