--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@
             <div>
                 <img src="./images/hero.jpg" alt="">
             </div>
-            <div class="">
+            <div class="about">
                 <h1>About us</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat cum totam optio omnis asperiores,
+                    ipsum iste, neque praesentium nisi mollitia, est quis aut eaque numquam labore! Quia minima
+                    laudantium earum.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat cum totam optio omnis asperiores,
                     ipsum iste, neque praesentium nisi mollitia, est quis aut eaque numquam labore! Quia minima
                     laudantium earum.</p>
