single artist details

--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
             </div>
             </div>
         </section>
+        <section class="artist">
+            <div class="artist-word">
+                <p>Socila Media</p>
+            </div>
+            <h5>sss</h5>
+        </section>
     </main>
 </body>
 
