single artist images

--- a/index.html
+++ b/index.html
@@ -74,9 +74,46 @@
         </section>
         <section class="artist">
             <div class="artist-word">
-                <p>Socila Media</p>
+                <p>Meet team</p>
             </div>
-            <h5>sss</h5>
+            <div class="artist-container">
+                <div class="artist-content">
+                    <div class="artist-img"></div>
+                    <p>
+                        <strong>ARTIST nAME</strong>
+                    </p>
+                    <P>
+                        <em>task</em>
+                    </P>
+                </div>
+                <div class="artist-content">
+                    <div class="artist-img"></div>
+                    <p>
+                        <strong>ARTIST nAME</strong>
+                    </p>
+                    <P>
+                        <em>task</em>
+                    </P>
+                </div>
+                <div class="artist-content">
+                    <div class="artist-img"></div>
+                    <p>
+                        <strong>ARTIST nAME</strong>
+                    </p>
+                    <P>
+                        <em>task</em>
+                    </P>
+                </div>
+                <div class="artist-content">
+                    <div class="artist-img"></div>
+                    <p>
+                        <strong>ARTIST nAME</strong>
+                    </p>
+                    <P>
+                        <em>task</em>
+                    </P>
+                </div>
+            </div>
         </section>
     </main>
 </body>
