Implementing artists images

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
             <div class="artist-container">
                 <div class="artist-content">
-                    <div class="artist-img"></div>
+                    <div class="artist-bien"></div>
                     <p>
                         <strong>ARTIST nAME</strong>
                     </p>
@@ -87,7 +87,7 @@
                     </P>
                 </div>
                 <div class="artist-content">
-                    <div class="artist-img"></div>
+                    <div class="artist-savara"></div>
                     <p>
                         <strong>ARTIST nAME</strong>
                     </p>
