Individual artist bio

--- a/index.html
+++ b/index.html
@@ -63,12 +63,19 @@
             </div>
             <div class="about">
                 <h1>About us</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat cum totam optio omnis asperiores,
-                    ipsum iste, neque praesentium nisi mollitia, est quis aut eaque numquam labore! Quia minima
-                    laudantium earum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat cum totam optio omnis asperiores,
-                    ipsum iste, neque praesentium nisi mollitia, est quis aut eaque numquam labore! Quia minima
-                    laudantium earum.</p>
+                <p>Sauti Sol is an award-winning afro pop group from Kenya, crowned Best Group (Africa) at the MTV
+                    Africa Music Awards (2016 MTV MAMA), 2016 Soundcity MTV Awards and African Muzik Magazine Awards (
+                    2016 AFRIMMA). They also won Best African Group at All Africa Music
+                    Awards (2015 AFRIMA) and an MTV EMA Award for Best African Act in 2014. Comprising Bien-Aime Baraza,
+                    Willis Austin Chimano,Polycarp Otieno and Savara Mudigi; the group mixes their soulful voices with
+                    vocal harmonies, guitar riffs and drum rhythm.</p>
+                <p>Sauti Sol blends warm resonant pop with traditional Kenyan influences. Their mélange of energetic
+                    rhythms has promoted the group to
+                    become one of Africa’s most celebrated and East Africa’s pioneers of a fresh sound that has inspired
+                    the sprouting of many other bands from East Africa. In 2016 Sauti Sol made history by being the
+                    first Kenyan artistes to run a successful and professional
+                    nationwide tour. After the Kenyan completion of Sauti Sol’s Live and Die in Afrika, it took onto the
+                    world stage with a focus on African countries and a detailed American Tour.</p>
             </div>
             </div>
         </section>
@@ -78,40 +85,77 @@
             </div>
             <div class="artist-container">
                 <div class="artist-content">
-                    <div class="artist-bien"></div>
-                    <p>
-                        <strong>ARTIST nAME</strong>
-                    </p>
-                    <P>
-                        <em>task</em>
-                    </P>
+                    <div class="artist-bien">
+                        <div class="bio">
+                            <p>Bien-Aime (French for beloved) Baraza is a vocalist, songwriter and guitarist. </p>
+                            <p>His style of singing is soulful and his songwriting skills celebrated by many.</p>
+                        </div>
+                    </div>
+                    <div class="names">
+                        <p>
+                            <strong class="art-name">Bien-Aime Baraza</strong>
+                        </p>
+                        <P>
+                            <em class="art-task">Vocalist, songwriter and guitarist</em>
+                        </P>
+                    </div>
                 </div>
                 <div class="artist-content">
-                    <div class="artist-savara"></div>
-                    <p>
-                        <strong>ARTIST nAME</strong>
-                    </p>
-                    <P>
-                        <em>task</em>
-                    </P>
+                    <div class="artist-savara">
+                        <div class="bio">
+                            <p>Savara Mudigi is a vocalist, percussionist, drummer and producer.
+                            </p>
+                            <p>His versatility in the band has played an instrumental role during tour and in the
+                                establishment on their imprint label: Sauti Sol Entertainment.</p>
+                        </div>
+                    </div>
+                    <div class="names">
+                        <p>
+                            <strong class="art-name">Savara Mudigi</strong>
+                        </p>
+                        <P>
+                            <em class="art-task">vocalist, percussionist, drummer and producer</em>
+                        </P>
+                    </div>
                 </div>
                 <div class="artist-content">
-                    <div class="artist-img"></div>
-                    <p>
-                        <strong>ARTIST nAME</strong>
-                    </p>
-                    <P>
-                        <em>task</em>
-                    </P>
+                    <div class="artist-poly">
+                        <div class="bio">
+                            <p>Willis Austin Chimano is a vocalist, keytar and saxophone player. His deep voice and
+                                flamboyant style makes him stand out in the group. Before the formation of Sauti Sol.
+                            </p>
+                            <p>Chimano contested and won in the annual Fête de la Musique music competition at the
+                                French Cultural Centre</p>
+                        </div>
+                    </div>
+                    <div class="names">
+                        <p>
+                            <strong class="art-name">Polycarp Otieno</strong>
+                        </p>
+                        <P>
+                            <em class="art-task">Guitarist and producer</em>
+                        </P>
+                    </div>
                 </div>
                 <div class="artist-content">
-                    <div class="artist-img"></div>
-                    <p>
-                        <strong>ARTIST nAME</strong>
-                    </p>
-                    <P>
-                        <em>task</em>
-                    </P>
+                    <div class="artist-chimano">
+                        <div class="bio">
+                            <p>Polycarp Otieno is a guitarist and producer. His signature style – guitar riffs blends
+                                with the group’s mix of soulful vocal harmonies and drum rhythm.
+                            </p>
+                            <p>His love for the guitar started early when he attended free guitar lessons at All Saints
+                                Cathedral.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="names">
+                        <p>
+                            <strong class="art-name">Willis Austin Chimano</strong>
+                        </p>
+                        <P>
+                            <em class="art-task">Vocalist, keytar and saxophone player</em>
+                        </P>
+                    </div>
                 </div>
             </div>
         </section>
