--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     <h4 class="heading">Sauti Sol</h4>
                     <ul class="pages">
                         <li><a href="#">About us</a></li>
+                        <li><a href="#">Team</a></li>
                         <li><a href="#">Music</a></li>
                         <li><a href="#">Video</a></li>
                         <li><a href="#">Contacts</a></li>
@@ -95,8 +96,8 @@
                         <p>
                             <strong class="art-name">Bien-Aime Baraza</strong>
                         </p>
-                        <P>
-                            <em class="art-task">Vocalist, songwriter and guitarist</em>
+                        <P class="art-task">
+                            <em class="">Vocalist, songwriter and guitarist</em>
                         </P>
                     </div>
                 </div>
@@ -113,13 +114,34 @@
                         <p>
                             <strong class="art-name">Savara Mudigi</strong>
                         </p>
-                        <P>
-                            <em class="art-task">vocalist, percussionist, drummer and producer</em>
+                        <P class="art-task">
+                            <em class="">vocalist, percussionist, drummer and producer</em>
                         </P>
                     </div>
                 </div>
                 <div class="artist-content">
                     <div class="artist-poly">
+                        <div class="bio">
+
+                            <p>Polycarp Otieno is a guitarist and producer. His signature style – guitar riffs blends
+                                with the group’s mix of soulful vocal harmonies and drum rhythm.
+                            </p>
+                            <p>His love for the guitar started early when he attended free guitar lessons at All Saints
+                                Cathedral.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="names">
+                        <p class="art-task">
+                            <strong class="art-name">Polycarp Otieno</strong>
+                        </p>
+                        <P class="art-task" style="padding: 0 50px;">
+                            <em class="">Guitarist and producer</em>
+                        </P>
+                    </div>
+                </div>
+                <div class="artist-content">
+                    <div class="artist-chimano">
                         <div class="bio">
                             <p>Willis Austin Chimano is a vocalist, keytar and saxophone player. His deep voice and
                                 flamboyant style makes him stand out in the group. Before the formation of Sauti Sol.
@@ -130,35 +152,20 @@
                     </div>
                     <div class="names">
                         <p>
-                            <strong class="art-name">Polycarp Otieno</strong>
-                        </p>
-                        <P>
-                            <em class="art-task">Guitarist and producer</em>
-                        </P>
-                    </div>
-                </div>
-                <div class="artist-content">
-                    <div class="artist-chimano">
-                        <div class="bio">
-                            <p>Polycarp Otieno is a guitarist and producer. His signature style – guitar riffs blends
-                                with the group’s mix of soulful vocal harmonies and drum rhythm.
-                            </p>
-                            <p>His love for the guitar started early when he attended free guitar lessons at All Saints
-                                Cathedral.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="names">
-                        <p>
                             <strong class="art-name">Willis Austin Chimano</strong>
                         </p>
-                        <P>
-                            <em class="art-task">Vocalist, keytar and saxophone player</em>
+                        <P class="art-task">
+                            <em class="">Vocalist, keytar and saxophone player</em>
                         </P>
                     </div>
+                    <!-- <audio controls autoplay>
+                        <source src="horse.ogg" type="audio/ogg">
+                        <source src="horse.mp3" type="audio/mpeg">
+                    </audio> -->
                 </div>
             </div>
         </section>
+        <section class="music"></section>
     </main>
 </body>
 
