music cover section

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <p class="art-task">
                             <strong class="art-name">Polycarp Otieno</strong>
                         </p>
-                        <P class="art-task" style="padding: 0 50px;">
+                        <P class="art-task">
                             <em class="">Guitarist and producer</em>
                         </P>
                     </div>
@@ -165,7 +165,22 @@
                 </div>
             </div>
         </section>
-        <section class="music"></section>
+        <section class="music">
+            <h1>Music</h1>
+            <div class="music-section">
+                <div class="music-cover">
+                    <img src="./images/hero.jpg" alt="">
+                    <div class="details">
+                        <p>
+                            <strong class="art-name">Mid-Nigtht Train</strong>
+                        </p>
+                        <P class="art-task">
+                            <em class="">2020</em>
+                        </P>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
