music cover details ie. track name

--- a/index.html
+++ b/index.html
@@ -169,14 +169,29 @@
             <h1>Music</h1>
             <div class="music-section">
                 <div class="music-cover">
-                    <img src="./images/hero.jpg" alt="">
-                    <div class="details">
-                        <p>
-                            <strong class="art-name">Mid-Nigtht Train</strong>
-                        </p>
-                        <P class="art-task">
-                            <em class="">2020</em>
-                        </P>
+                    <div class="cover">
+                        <img src="./images/hero.jpg" alt="">
+                        <div class="details">
+                            <p>
+                                <strong class="art-name">Mid-Nigtht Train</strong>
+                            </p>
+                            <P class="art-task">
+                                <em class="">2020</em>
+                            </P>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="cover">
+                        <img src="./images/hero.jpg" alt="">
+                        <div class="details">
+                            <p>
+                                <strong class="art-name">Mid-Nigtht Train</strong>
+                            </p>
+                            <P class="art-task">
+                                <em class="">2020</em>
+                            </P>
+                        </div>
                     </div>
                 </div>
             </div>
