--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="music-section">
                 <div class="music-cover">
                     <div class="cover">
-                        <img src="./images/hero.jpg" alt="">
+                        <img src="./images/midnight.png" alt="">
                         <div class="details">
                             <p>
                                 <strong class="art-name">Mid-Nigtht Train</strong>
@@ -180,10 +180,30 @@
                             </P>
                         </div>
                     </div>
+                    <div>
+                        <div class="audio">
+                            <audio controls autoplay>
+                                <source src="horse.ogg" type="audio/ogg">
+                                <source src="horse.mp3" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                            </audio>
+                        </div>
+                    </div>
                 </div>
                 <div>
                     <div class="cover">
-                        <img src="./images/hero.jpg" alt="">
+                        <img src="./images/midnight.png" alt="">
+                        <div class="details">
+                            <p>
+                                <strong class="art-name">Mid-Nigtht Train</strong>
+                            </p>
+                            <P class="art-task">
+                                <em class="">2020</em>
+                            </P>
+                        </div>
+                    </div>
+                    <div class="cover">
+                        <img src="./images/midnight.png" alt="">
                         <div class="details">
                             <p>
                                 <strong class="art-name">Mid-Nigtht Train</strong>
