--- a/index.html
+++ b/index.html
@@ -203,13 +203,35 @@
                         </div>
                     </div>
                     <div class="cover">
-                        <img src="./images/midnight.png" alt="">
+                        <img src="./images/afri.png" alt="">
                         <div class="details">
                             <p>
                                 <strong class="art-name">Mid-Nigtht Train</strong>
                             </p>
                             <P class="art-task">
                                 <em class="">2020</em>
+                            </P>
+                        </div>
+                    </div>
+                    <div class="cover">
+                        <img src="./images/live.png" alt="">
+                        <div class="details">
+                            <p>
+                                <strong class="art-name">Mid-Nigtht Train</strong>
+                            </p>
+                            <P class="art-task">
+                                <em class="">2020</em>
+                            </P>
+                        </div>
+                    </div>
+                    <div class="cover">
+                        <img src="./images/mwan.png" alt="">
+                        <div class="details">
+                            <p>
+                                <strong class="art-name">Mid-Nigtht Train</strong>
+                            </p>
+                            <P class="art-task">
+                                <em class="">2009</em>
                             </P>
                         </div>
                     </div>
