populate with music

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         <div class="audio">
                             <audio controls autoplay>
                                 <source src="horse.ogg" type="audio/ogg">
-                                <source src="horse.mp3" type="audio/mpeg">
+                                <source src="./images/Sauti Sol - Lazizi.mp3" type="audio/mpeg">
                                 Your browser does not support the audio element.
                             </audio>
                         </div>
@@ -206,10 +206,10 @@
                         <img src="./images/afri.png" alt="">
                         <div class="details">
                             <p>
-                                <strong class="art-name">Mid-Nigtht Train</strong>
+                                <strong class="art-name">Afrikan Sauce</strong>
                             </p>
                             <P class="art-task">
-                                <em class="">2020</em>
+                                <em class="">2019</em>
                             </P>
                         </div>
                     </div>
@@ -217,10 +217,10 @@
                         <img src="./images/live.png" alt="">
                         <div class="details">
                             <p>
-                                <strong class="art-name">Mid-Nigtht Train</strong>
+                                <strong class="art-name">Live and Die in Afrika</strong>
                             </p>
                             <P class="art-task">
-                                <em class="">2020</em>
+                                <em class="">2015</em>
                             </P>
                         </div>
                     </div>
@@ -228,10 +228,10 @@
                         <img src="./images/mwan.png" alt="">
                         <div class="details">
                             <p>
-                                <strong class="art-name">Mid-Nigtht Train</strong>
+                                <strong class="art-name">Sol Filosofia</strong>
                             </p>
                             <P class="art-task">
-                                <em class="">2009</em>
+                                <em class="">2011</em>
                             </P>
                         </div>
                     </div>
