adding icon on header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- add icon link -->
+    <link rel="icon" href="./images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Sauti Sol</title>
 </head>
@@ -180,12 +182,48 @@
                             </P>
                         </div>
                     </div>
-                    <div>
+                    <div class="music-audio">
+                        <div class="audio">
+                            <audio controls autoplay>
+                                <source
+                                    src="./images/songs/Live And Die In Afrika - Sauti Sol (Producer X Moombahton Remix).mp3 type="
+                                    audio/mp3">
+                            </audio>
+                        </div>
                         <div class="audio">
                             <audio controls autoplay>
                                 <source src="horse.ogg" type="audio/ogg">
                                 <source src="./images/Sauti Sol - Lazizi.mp3" type="audio/mpeg">
-                                Your browser does not support the audio element.
+                            </audio>
+                        </div>
+                        <div class="audio">
+                            <audio controls autoplay>
+                                <source src="horse.ogg" type="audio/ogg">
+                                <source src="./images/Sauti Sol - Lazizi.mp3" type="audio/mpeg">
+                            </audio>
+                        </div>
+                        <div class="audio">
+                            <audio controls autoplay>
+                                <source src="horse.ogg" type="audio/ogg">
+                                <source src="./images/Sauti Sol - Lazizi.mp3" type="audio/mpeg">
+                            </audio>
+                        </div>
+                        <div class="audio">
+                            <audio controls autoplay>
+                                <source src="horse.ogg" type="audio/ogg">
+                                <source src="./images/Sauti Sol - Lazizi.mp3" type="audio/mpeg">
+                            </audio>
+                        </div>
+                        <div class="audio">
+                            <audio controls autoplay>
+                                <source src="horse.ogg" type="audio/ogg">
+                                <source src="./images/songs/Sauti Sol - Lazizi.mp3 Sol - Lazizi.mp3" type="audio/mpeg">
+                            </audio>
+                        </div>
+                        <div class="audio">
+                            <audio controls autoplay>
+                                <source src="horse.ogg" type="audio/ogg">
+                                <source src="./images/songs/Sauti Sol - Lazizi.mp3 Sol - Lazizi.mp3" type="audio/mpeg">
                             </audio>
                         </div>
                     </div>
