--- a/index.html
+++ b/index.html
@@ -185,45 +185,37 @@
                     <div class="music-audio">
                         <div class="audio">
                             <audio controls autoplay>
-                                <source
-                                    src="./images/songs/Live And Die In Afrika - Sauti Sol (Producer X Moombahton Remix).mp3 type="
-                                    audio/mp3">
+                                <source src="./images/songs/nairobi.mp3" type="audio/mpeg">
                             </audio>
                         </div>
                         <div class="audio">
                             <audio controls autoplay>
-                                <source src="horse.ogg" type="audio/ogg">
-                                <source src="./images/Sauti Sol - Lazizi.mp3" type="audio/mpeg">
+                                <source src="./images/songs/susana.mp3" type="audio/mpeg">
                             </audio>
                         </div>
                         <div class="audio">
                             <audio controls autoplay>
-                                <source src="horse.ogg" type="audio/ogg">
-                                <source src="./images/Sauti Sol - Lazizi.mp3" type="audio/mpeg">
+                                <source src="./images/songs/live.mp3" type="audio/mpeg">
                             </audio>
                         </div>
                         <div class="audio">
                             <audio controls autoplay>
-                                <source src="horse.ogg" type="audio/ogg">
-                                <source src="./images/Sauti Sol - Lazizi.mp3" type="audio/mpeg">
+                                <source src="./images/songs/lazizi.mp3" type="audio/mpeg">
                             </audio>
                         </div>
                         <div class="audio">
                             <audio controls autoplay>
-                                <source src="horse.ogg" type="audio/ogg">
-                                <source src="./images/Sauti Sol - Lazizi.mp3" type="audio/mpeg">
+                                <source src="./images/songs/extra.mp3" type="audio/mpeg">
                             </audio>
                         </div>
                         <div class="audio">
                             <audio controls autoplay>
-                                <source src="horse.ogg" type="audio/ogg">
-                                <source src="./images/songs/Sauti Sol - Lazizi.mp3 Sol - Lazizi.mp3" type="audio/mpeg">
+                                <source src="./images/songs/insecure.mp3" type="audio/mpeg">
                             </audio>
                         </div>
                         <div class="audio">
                             <audio controls autoplay>
-                                <source src="horse.ogg" type="audio/ogg">
-                                <source src="./images/songs/Sauti Sol - Lazizi.mp3 Sol - Lazizi.mp3" type="audio/mpeg">
+                                <source src="./images/songs/melanin.mp3" type="audio/mpeg">
                             </audio>
                         </div>
                     </div>
@@ -274,6 +266,31 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="aboutus">
+            <div>
+                <video width="320" height="240" controls>
+                    <source src="movie.mp4" type="video/mp4">
+                    <source src="movie.ogg" type="video/ogg">
+                </video>
+            </div>
+            <div class="about">
+                <h1>About us</h1>
+                <p>Sauti Sol is an award-winning afro pop group from Kenya, crowned Best Group (Africa) at the MTV
+                    Africa Music Awards (2016 MTV MAMA), 2016 Soundcity MTV Awards and African Muzik Magazine Awards (
+                    2016 AFRIMMA). They also won Best African Group at All Africa Music
+                    Awards (2015 AFRIMA) and an MTV EMA Award for Best African Act in 2014. Comprising Bien-Aime Baraza,
+                    Willis Austin Chimano,Polycarp Otieno and Savara Mudigi; the group mixes their soulful voices with
+                    vocal harmonies, guitar riffs and drum rhythm.</p>
+                <p>Sauti Sol blends warm resonant pop with traditional Kenyan influences. Their mélange of energetic
+                    rhythms has promoted the group to
+                    become one of Africa’s most celebrated and East Africa’s pioneers of a fresh sound that has inspired
+                    the sprouting of many other bands from East Africa. In 2016 Sauti Sol made history by being the
+                    first Kenyan artistes to run a successful and professional
+                    nationwide tour. After the Kenyan completion of Sauti Sol’s Live and Die in Afrika, it took onto the
+                    world stage with a focus on African countries and a detailed American Tour.</p>
+            </div>
             </div>
         </section>
     </main>
