--- a/index.html
+++ b/index.html
@@ -268,28 +268,32 @@
                 </div>
             </div>
         </section>
-        <section class="aboutus">
-            <div>
-                <video width="320" height="240" controls>
-                    <source src="movie.mp4" type="video/mp4">
-                    <source src="movie.ogg" type="video/ogg">
-                </video>
-            </div>
+        <section class="video">
             <div class="about">
-                <h1>About us</h1>
-                <p>Sauti Sol is an award-winning afro pop group from Kenya, crowned Best Group (Africa) at the MTV
-                    Africa Music Awards (2016 MTV MAMA), 2016 Soundcity MTV Awards and African Muzik Magazine Awards (
-                    2016 AFRIMMA). They also won Best African Group at All Africa Music
-                    Awards (2015 AFRIMA) and an MTV EMA Award for Best African Act in 2014. Comprising Bien-Aime Baraza,
-                    Willis Austin Chimano,Polycarp Otieno and Savara Mudigi; the group mixes their soulful voices with
-                    vocal harmonies, guitar riffs and drum rhythm.</p>
-                <p>Sauti Sol blends warm resonant pop with traditional Kenyan influences. Their mélange of energetic
-                    rhythms has promoted the group to
-                    become one of Africa’s most celebrated and East Africa’s pioneers of a fresh sound that has inspired
-                    the sprouting of many other bands from East Africa. In 2016 Sauti Sol made history by being the
-                    first Kenyan artistes to run a successful and professional
-                    nationwide tour. After the Kenyan completion of Sauti Sol’s Live and Die in Afrika, it took onto the
-                    world stage with a focus on African countries and a detailed American Tour.</p>
+                <h1>Videos</h1>
+            </div>
+            <div class="aboutus">
+                <div>
+                    <div class="">
+                        <video id="myVideo" loop muted autoplay poster="">
+                            <source src="./images/video/insecure.mp4" type="video/mp4" codecs="avc1.42E01E, mp4a.40.2">
+                            <source src="./images/video/insecure.mp4" type="video/ogg">
+
+                        </video>
+                    </div>
+                </div>
+                <div class="">
+                    <video controls poster="/images/sauti.jpg">
+                        <source src="movie.mp4" type="video/mp4">
+                        <source src="movie.ogg" type="video/ogg">
+                        Your browser does not support the video tag.
+                    </video>
+                    <video controls poster="/images/w3html5.gif">
+                        <source src="movie.mp4" type="video/mp4">
+                        <source src="movie.ogg" type="video/ogg">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
             </div>
             </div>
         </section>
